[gd_scene load_steps=8 format=3 uid="uid://dwr1ggqprofhj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_fnhwx"]
[ext_resource type="PackedScene" uid="uid://bdtq6svqpbjsd" path="res://scenes/snake_head.tscn" id="2_yqjgv"]
[ext_resource type="PackedScene" uid="uid://j1mduwm4plgf" path="res://scenes/hud.tscn" id="4_12mim"]
[ext_resource type="AudioStream" uid="uid://c0mirpsrqf756" path="res://assets/music/Roku Snake OST - Main Theme.mp3" id="5_fpnub"]
[ext_resource type="AudioStream" uid="uid://idv76avxv666" path="res://assets/music/Persona 5 OST - Rivers In the Desert -instrumental version-.mp3" id="6_q08k3"]
[ext_resource type="AudioStream" uid="uid://d305pgaqeg5w2" path="res://assets/music/20279__koops__apple_crunch_16.wav" id="6_y0wmf"]

[sub_resource type="Theme" id="Theme_g462w"]

[node name="Main" type="Node"]
script = ExtResource("1_fnhwx")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_g462w")
color = Color(0.468468, 0.00272459, 0.823708, 1)

[node name="snake_head" parent="." instance=ExtResource("2_yqjgv")]
position = Vector2(226, 197)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(536, 967)

[node name="HUD" parent="." instance=ExtResource("4_12mim")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_fpnub")
parameters/looping = false

[node name="EatingApple" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y0wmf")

[node name="EasterEgg" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_q08k3")

[connection signal="game_over" from="snake_head" to="." method="_on_snake_head_game_over"]
[connection signal="change_difficulty" from="HUD" to="." method="_on_hud_change_difficulty"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
[connection signal="finished" from="EasterEgg" to="." method="_on_easter_egg_finished"]
